# sinergy-super-app

./: .gitignore
.github/workflows/: android.yml
mobile/android/: build.gradle
mobile/android/app/: build.gradle
mobile/android/app/src/main/: AndroidManifest.xml
mobile/android/app/src/main/assets/: manifest.json
mobile/android/app/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp
mobile/android/app/src/main/java/com/sinergy/node/: LlamaBridge.java  MainActivity.java  NodeForegroundService.java
mobile/android/app/src/main/res/values/: strings.xml
mobile/app/: index.html  sw.js
mobile/app/src/main/assets/: sinergy_agi_server.py
